--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(LearnOpenGL)
 
 ADD_SUBDIRECTORY(src)
+ADD_SUBDIRECTORY(example/lighting_texture)
+
 set(CMAKE_CXX_STANDARD 14)
 
